--- a/src/index.html
+++ b/src/index.html
@@ -18,27 +18,22 @@
         <div class="content">
             <section class="score-list">
                 <h4>Recent Score</h4>
-                <button class="btn btn-info btn-sm" type="button">Refresh</button>
+                <button class="btn btn-info btn-sm" type="button" id="refreshBtn">Refresh</button>
                 <table class="list table table-striped">
                 <tr>
                     <th>Name</th>
                     <th>Score</th>
                 </tr>
-                <tr>
-                    <td>Jack</td>
-                    <td>19</td>
-                </tr>
-                <tr>
-                    <td>Ali</td>
-                    <td>20</td>
-                </tr>
+               
                 </table>
             </section>
             <section class="add-score">
                 <h4>Add your score</h4>
-                <input type="text" class="name form-control" placeholder="Your name....">
-                <input type="text" class="score form-control" placeholder="Your email....">
-                <button class="btn btn-success btn-sm" type="button">Submit</button>
+               <form id="form">
+                <input type="text" class="form-control" placeholder="Your name...." id="user">
+                <input type="text" class="score form-control" placeholder="Your score....">
+                <button class="btn btn-success btn-sm" type="submit">Submit</button>
+               </form>
             </section>
         </div>
     </div>
