--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
     crossorigin="anonymous"
   />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>LeaderBoard</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
         <div class="content">
             <section class="score-list">
                 <h4>Recent Score</h4>
-                <button class="btn btn-info btn-sm" type="button" id="refreshBtn">Refresh</button>
+                <button class="btn btn-info btn-sm" type="button" id="refreshBtn">Refresh <i class="fa fa-refresh"></i></button>
                 <table class="list table table-striped">
                 <tr>
                     <th>Name</th>
@@ -32,7 +33,7 @@
                <form id="form">
                 <input type="text" class="form-control" placeholder="Your name...." id="user">
                 <input type="text" class="score form-control" placeholder="Your score....">
-                <button class="btn btn-success btn-sm" type="submit">Submit</button>
+                <button class="btn btn-success btn-sm" type="submit">Submit <i class="fa fa-save"></i></button>
                </form>
             </section>
         </div>
